Fix for background images and header not showing

--- a/CSS/style-home.css
+++ b/CSS/style-home.css
@@ -11,7 +11,7 @@ body{
 
 body{
 	background-color:black;
-	background-image:url('../Images/Bcakground.png');
+	background-image:url('../images/Bcakground.png');
 	background-size:2000px;
 	background-repeat:no-repeat;
 	background-position: center bottom;
@@ -72,7 +72,7 @@ a:active{
 	display:flex;
 	width:100%;
 	height:400px;
-	background-image:url('../Images/camping.png');
+	background-image:url('../images/camping.png');
 	background-size:1500px;
 	background-repeat:no-repeat;
 	background-position: center center;
